fixed top nav collapsing issue

--- a/styles/index.less
+++ b/styles/index.less
@@ -144,7 +144,7 @@ a {
 }
 
 #main {
-  margin-top: 3em;
+  margin-top: 2em !important;
 }
 
 @import "thrive";
